# Skills-MCP-GLPI

./: .env.example  .gitignore  CHANGELOG-PROMPTS.md  README.md  TESTING-PROMPTS.md  TESTING.md  ecosystem.config.cjs  requirements.txt
source-from-anfaia-glpi-assistia/: .gitignore  README.en.md  README.gl.md  README.md  mcp_server.py  pyproject.toml
source-from-anfaia-glpi-assistia/docs/: Historico_prototipos_agentes.md  analisis_LLM_para_CrewAi.md  analisis_instalacion_GLPI_local.md  entorno_desarrollo_agentes.md  fastmcp.md
source-from-anfaia-glpi-assistia/glpiassistia/: .gitignore  composer.json  glpiassistia_anonymous.js  hook.php  setup.php
source-from-anfaia-glpi-assistia/glpiassistia/.tx/: config
source-from-anfaia-glpi-assistia/glpiassistia/front/: config.php  glpiassistia.form.php  glpiassistia.php
source-from-anfaia-glpi-assistia/glpiassistia/install/: install.php
source-from-anfaia-glpi-assistia/glpiassistia/src/: Config.php  Glpiassistia.php  PluginGlpiassistiaConfig.php
source-from-anfaia-glpi-assistia/glpiassistiaserver/: .gitignore  __init__.py  __main__.py  crew.py  metrics_logger.py  webapp.py
source-from-anfaia-glpi-assistia/glpiassistiaserver/config/: agents.yaml  tasks.yaml
source-from-anfaia-glpi-assistia/glpiassistiaserver/tools/: glpi_tool.py  ping_tool.py  wikijs_mcp_tool.py
source-from-anfaia-glpi-assistia/glpiassistiaserver/tools/mcp_tools/: glpi_handler.py  wiki_handler.py
src/: __init__.py  config.py  glpi_service.py  handlers.py  http_client.py  logger.py  main.py  main.py.broken  models.py  tools.py
tests/: __init__.py  (+11 more)
(+26 files in other folders)
